# frameworks-demo

./: README.md  count_files.sh
counter-angular/: README.md  angular.json  package-lock.json  package.json
counter-angular/src/app/: app.component.html  app.component.spec.ts  app.component.ts
counter-next/: package-lock.json  package.json
counter-next/app/: page.tsx
counter-svelte/src/: App.svelte
counter-vue/: README.md  package.json
counter-vue/src/: App.vue
github-stats/: pyproject.toml
github-stats/github_stats/: data.csv  formatted_table.html  formatted_table.txt  main.py  make_table.py
